<resources>
    <string name="app_name">MyTasks</string>
    <string name="task">Tarefa</string>
    <string name="tittle">Título *</string>
    <string name="name">Nome</string>
    <string name="category">Categoria</string>
    <string name="categories">Categorias</string>
    <string name="create">Criar</string>
    <string name="finish">Concluir</string>
    <string name="undo">Desfazer</string>
    <string name="sort">Ordenar</string>
    <string name="delete">Excluir</string>
    <string name="clear">Limpar</string>
    <string name="add">Adicionar</string>
    <string name="update">Editar</string>
    <string name="expires_in">Expira em *</string>
    <string name="expires_today">Expira hoje !</string>
    <string name="expires_in_x_days">Expira em %d dia (s)</string>
    <string name="on_hold_x">Em espera: %d</string>
    <string name="finished_x">Concluídas: %d</string>
    <string name="x_tasks_required">%d tarefas requeridas</string>
    <string name="expired">Expirada :(</string>
    <string name="finished_in_x">Concluída em %s</string>
    <string name="finished_in">Concluída em *</string>
    <string name="finish_all">Concluir tudo</string>
    <string name="select_all">Selecionar tudo</string>
    <string name="delete_all">Excluir tudo</string>
    <string name="undo_all">Desfazer tudo</string>
    <string name="description">Descrição</string>
    <string name="requirements">Requisitos</string>
    <string name="requirement_s">Requisito(s)</string>
    <string name="add_requirements">SALVAR REQUISITOS</string>
    <string name="search">search</string>
</resources>