<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sortBySlaDate"
        android:icon="@drawable/ic_blue_sort"
        android:orderInCategory="0"
        android:title="@string/sort" />

    <item
        android:id="@+id/deleteAll"
        android:icon="@drawable/ic_blue_delete"
        android:orderInCategory="1"
        android:title="@string/delete_all" />

    <item
        android:id="@+id/finishAll"
        android:icon="@drawable/ic_blue_check"
        android:orderInCategory="2"
        android:title="@string/finish_all" />

    <item
        android:id="@+id/undoAll"
        android:icon="@drawable/ic_blue_undo_task"
        android:orderInCategory="3"
        android:title="@string/undo_all" />

</menu>