<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/finish"
        android:icon="@drawable/ic_white_check"
        android:orderInCategory="0"
        android:title="@string/finish"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_white_undo_task"
        android:orderInCategory="1"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_white_delete"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/ic_white_select_all"
        android:orderInCategory="3"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

</menu>